# OneDriveGUI

./: .gitignore  AppImageBuilder.yml  MANIFEST.in  README.md  build_appimage.sh  build_appimage_docker.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
OneDriveGUI/: OneDriveGUI.py
OneDriveGUI/resources/: default_config
OneDriveGUI/ui/: list_item_widget.ui  mainwindow.ui  mainwindow.ui.autosave  process_status_page.ui  profile_settings_page.ui  settings.ui  setup_wizard.ui  ui_login.py  ui_mainwindow.py  ui_process_status_page.py  ui_profile_settings_page.py  ui_settings.py
docs/: INSTALL.md
scripts/: pyinstaller.txt
src/: OneDriveGUI-bob-manjaro.py  OneDriveGUI.desktop  OneDriveGUI.py  global_config.py  gui_settings_window.py  logger.py  main_window.py  options.py  profile_settings_window.py  wizard.py  workers.py
src/__thrash/: OneDriveGUI-backup.py  OneDriveGUI-bob-Manja.py  config  dict_parser_test.py  file_dialog_test.py  list_test.py  mainwindow.py  message_box_test.py  new_window_test.py  output_parser_test.py  re_test.py  setup_wizard.py  system_tray.py  test.py  ui_list_item_widget.py_  ui_setup_wizard.py  ui_wizardPage_welcome.py  version2.py  wizard_test.py  wizard_test2.py
src/onedrive_gui/: OneDriveGUI.py  __main__.py  global_config.py  gui_settings_window.py  logger.py  main_window.py  options.py  profile_settings_window.py  wizard.py  workers.py
src/resources/: OneDriveGUI.desktop  default_config  io.github.bpozdena.onedrivegui.metainfo.xml
src/settings/: gui_settings.py
src/ui/: external_login.ui  login.ui  (+22 more)
(+31 files in other folders)
