[project]
name = "onedrive-gui"
version = "1.3.2"
description = "A simple GUI for Linux OneDrive Client, with multi-account support."
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE"]

[project.scripts]
onedrive-gui = "onedrive_gui.OneDriveGUI:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
